--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.2.0",
     "mongoose": "^8.0.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "path": "^0.12.7",
+    "randomstring": "^1.3.0",
+    "sharp": "^0.33.0",
     "uuid": "^9.0.1"
   }
 }
