--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
+    "axios": "^1.6.2",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
@@ -27,6 +28,7 @@
     "path": "^0.12.7",
     "randomstring": "^1.3.0",
     "sharp": "^0.33.0",
+    "sweetalert2": "^11.10.1",
     "uuid": "^9.0.1"
   }
 }
