--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nodemailer": "^6.9.7",
     "path": "^0.12.7",
     "randomstring": "^1.3.0",
+    "razorpay": "^2.9.2",
     "sharp": "^0.33.0",
     "sweetalert2": "^11.10.1",
     "uuid": "^9.0.1"
