--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
-    "@sendgrid/mail": "^7.7.0",
+    "@sendgrid/mail": "^8.1.6",
     "axios": "^1.6.2",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
@@ -26,6 +26,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "path": "^0.12.7",
+    "pdfkit": "^0.17.2",
     "randomstring": "^1.3.0",
     "razorpay": "^2.9.2",
     "sharp": "^0.33.0",
